@@ -1,6 +1,8 @@
 1.3
   - in ldap_delete, treat notAllowedOnNonLeaf as non-fatal, allowing
     subtrees to be deleted in incorrect order
+  - check for empty DNs later, so that search results including the
+    ROOT_DSE do not lead to a parse error anymore
 
 1.2 2004-07-07 r18 (patch-17)
   - fixed segfault: allow deletions to be skipped
